# my-cpp-proj-style

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: clang-format-check.yml  test-flow.yml  unittest-gtest-mkl.yml
src/: CMakeLists.txt  using_mkl.cc
tests/: CMakeLists.txt  gtest_simple.cc
